# spinner

./: .gitignore  404.html  CITATION.cff  README.md  generate.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: bench-example.yml  mkdocs-update.yml  package-path.yml  publish.yml  python-test.yml
assets/: citation.bib
benchs/mpi-io/: CMakeLists.txt  main.cpp
benchs/omp-tasks/: CMakeLists.txt  main.cpp
contribute/: index.html
docs/: contribute.md  examples.md  future.MD  index.md  slurm.MD  slurm.md  usage.md
docs/examples/: capture_output.yaml  extra_args.yaml  extra_args_list.yaml  extra_args_sleep_list.yaml  multi_app_benchmark.yaml  retry_returncode.yaml  return_code_options.yaml  sleep_benchmark.yaml  timeout_test.yaml
examples/: extra_args.yaml  extra_args_list.yaml  index.html  sleep_plot.yaml  timeout_test.yaml  zip_pairs.yaml
search/: search_index.json
slurm/: index.html
spinner/: __init__.py  __main__.py  app.py  bench_settings.json  bench_settings.yaml  main.py  reporter.ipynb  requirements.txt  schema.py
spinner/cli/: main.py  util.py
spinner/exporter/: __init__.py  ai_exporter.py  exporter.py  llm.py  reporter.ipynb
spinner/generator/: rand_int.py
spinner/runner/: __init__.py  instance_builder.py  instance_runner.py  progress.py  utilities.py
spinner/runner/mpi_io/: mpi_runner.py
spinner/runner/omp_tasks/: omp_runner.py
tests/: conftest.py  test_capture_all.py  test_cli_verbosity.py  test_export_warning.py  test_exporter_notebook.py  test_extra_args.py  test_formatting.py  test_retry_return_codes.py  test_runner_logging.py  test_schema.py  test_timeout_retry.py
usage/: index.html
