[project]
name = "spinner"
authors = [
    {name = "Rodrigo Ceccato de Freitas", email = "rodrigoceccatodefreitas@gmail.com"},
    {name = "Jhonatan Cléto", email="j256444@dac.unicamp.br"}
]
version = "0.0.1"
requires-python = ">=3.9.12, <4"
dependencies = [
    "click~=8.1",
    "ipykernel~=6.29",
    "jinja2~=3.1",
    "jupyter~=1.1",
    "matplotlib~=3.10",
    "numpy~=2.2",
    "pandas~=2.2",
    "pydantic~=2.10",
    "rich~=13.9",
    "scipy~=1.15",
    "seaborn~=0.13",
    "tokenize-rt~=6.1",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "black[jupyter]==24.4.2",
    "isort==5.13.2",
    "taskipy==1.13.0",
    "pytest",
]

[project.scripts]
spinner = "spinner.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["spinner*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
"spinner" = ["spinner/exporter/reporter.ipynb"]

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
format = "black . && isort ."

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
